[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/land.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/hit_player.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 13 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioLand" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
